BUG: 220403

Switch KAuth backend probing to static code compilation without the use of Qt's static plugins. This has some nice side effects:

1. Compilation with KDE4_ENABLE_FINAL works again (see bug in question)
2. The asserts are no longer triggered (they're still there for beauty), since now an error at compile time would occur instead
3. The whole probing is slightly more reliable.

It all seems to work but I urge everyone to test since release is near.
I'm backporting this commit in minutes


svn path=/trunk/KDE/kdelibs/; revision=1081127